[package]
name = "tictactoe-engine"
version = "0.1.0"
authors = ["birchmd"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasmi = "0.4.2"
parity-wasm = "0.35.1"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
